--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "express": "^4.9.8",
+    "express": "^4.9.8"
   },
   "devDependencies": {
     "istanbul": "^0.3.22"
